--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,19 +10,31 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-    <table class="job-listing" th:fragment="printJobs">
-    <tr th:each = " row : ${jobs}">
-        <td th:text="${'ID: '+ row.id}">ID</td>
-        <td th:text="${'Name : '+ row.name}">Name</td>
-        <td th:text="${'Employer: '+ row.employer}">Employer</td>
-        <td th:text="${'Location: '+ row.location}">Location</td>
-        <td th:text="${'Position Type: '+ row.positionType}">Position Type</td>
-        <td th:text="${'Skill: '+ row.coreCompetency}">Skill</td>
-    </tr>
-</table>
+    <th:block th:each=" row : ${jobs}" th:fragment="printJobs">
+        <table class="job-listing">
 
+            <tr>
+                <td th:text="${'ID: '+ row.id}">ID</td>
+            </tr>
+            <tr>
+                <td th:text="${'Name : '+ row.name}">Name</td>
+            </tr>
+            <tr>
+                <td th:text="${'Employer: '+ row.employer}">Employer</td>
+            </tr>
+            <tr>
+                <td th:text="${'Location: '+ row.location}">Location</td>
+            </tr>
+            <tr>
+                <td th:text="${'Position Type: '+ row.positionType}">Position Type</td>
+            </tr>
+            <tr>
+                <td th:text="${'Skill: '+ row.coreCompetency}">Skill</td>
+            </tr>
+
+        </table>
+    </th:block>
 </div>
 </body>
 </html>
